# MyEngine

./: .gitignore  CMakeLists.txt  imgui.ini
.cache/clangd/index/: AudioEngine.cpp.B08802CE378A9A52.idx  AudioEngine.hpp.3CF57A22CC59FF9F.idx  Config.hpp.606FB2CF86247732.idx  Math.cpp.1F91CB701CB17B3B.idx  Math.hpp.31CB2EBB1CEEFB8F.idx  Texture2D.cpp.E9C29B60FD270B4D.idx  Texture2D.hpp.FAFAAE34242B3742.idx  Window.cpp.11AEF3A863A54DFD.idx  Window.hpp.6422F6AA0ADDE2A5.idx  imconfig.h.A0AA09E08EFBAF41.idx  imgui.cpp.1841484130E635A6.idx  imgui.h.9D54E5B989FF3C4B.idx  imgui_draw.cpp.24BAACFBCFBB2AC2.idx  imgui_impl_glfw.cpp.2093B2C9E9736BB7.idx  imgui_impl_glfw.h.1506BAB2E8C3E394.idx  imgui_impl_opengl3.cpp.82638763A481B21C.idx  imgui_impl_opengl3.h.A751FEB4CDD00342.idx  imgui_tables.cpp.F9ACB26021007E20.idx  imgui_widgets.cpp.DD5B02FC97C03463.idx  main_sandbox.cpp.D91121C02A5529E3.idx  miniaudio.h.9CC45CF448C54949.idx  stb_image.h.628725796C028A34.idx
Editor/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Audio/: AudioEngine.cpp  AudioEngine.hpp
Engine/Core/: Config.hpp  Math.cpp  Math.hpp
Engine/Platform/: Window.cpp  Window.hpp
Engine/Render/: Texture2D.cpp  Texture2D.hpp
Sandbox/: CMakeLists.txt  main_sandbox.cpp
